--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+<!-- <div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
     <mat-toolbar color="primary" class="example-toolbar">
         <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
         <h1 class="example-app-name">Responsive App</h1>
@@ -14,8 +14,8 @@
         </mat-sidenav>
 
         <mat-sidenav-content>
-            <!-- <p *ngFor="let content of fillerContent">{{content}}</p> -->
             <router-outlet></router-outlet>
         </mat-sidenav-content>
     </mat-sidenav-container>
-</div>
+</div> -->
+<router-outlet></router-outlet>
