Added footer changes

--- a/src/assets/scss/config/sass-variables.scss
+++ b/src/assets/scss/config/sass-variables.scss
@@ -73,3 +73,5 @@ $gray-900: #212529;
 $black: #000;
 $font-weight-bold: 700;
 $dark: $gray-800;
+$text-muted: $gray-600;
+$card-border-color: $gray-300;
